--- a/frontend/src/app/test/test.component.html
+++ b/frontend/src/app/test/test.component.html
@@ -1,16 +1,3 @@
-<p-table [value]="users" [paginator]="true" [rows]="10">
-  <ng-template pTemplate="header">
-      <tr class="ui-widget-header">
-        <th *ngFor="let col of cols">
-          {{col.header}}
-        </th>
-      </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-car>
-      <tr >
-        <td *ngFor="let col of cols">
-          {{car[col.field]}}
-        </td>
-      </tr>
-  </ng-template>
-</p-table>
+<p>
+  test-component works
+</p>
